# courses_oop

./: README.md  index.html  main.py  pyproject.toml  requirements.txt  test.json
data/: test.json  tests.json
src/: API.py  data.py  vacancy.py
tests/: conftest.py  test_API.py  test_data.py  test_vacancy.py
