[tool.poetry]
name = "courses-oop"
version = "0.1.0"
description = ""
authors = ["Mery-debug <m.a.shap58000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.6.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
requests = "^2.32.3"
pandas = "^2.2.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
